FEAT(profile): implemented api docs and update the password section to allow the user to update the password
